Small interface fixes.

--- a/app/views/molecules/_search_form.html.erb
+++ b/app/views/molecules/_search_form.html.erb
@@ -4,9 +4,9 @@
     <input type="text" class="form-control" id="smarts" name="smarts" placeholder="Exemplo: [CX3](=O)[OX2H1] (Ácido carboxílico)">
   </div>
   <p>
-    Alguns padrões pré-definidos: <a class="add-smarts" data-smarts-type="carboxilico">Ácido carboxílico</a> |
-    <a class="add-smarts" data-smarts-type="amina">Amina</a> |
-    <a class="add-smarts" data-smarts-type="amida">Amida</a>
+    Alguns padrões pré-definidos: <a href="javascript:void(0);" onclick="add_smarts(this)" class="add-smarts" data-smarts-type="carboxilico">Ácido carboxílico</a> |
+    <a href="javascript:void(0);" onclick="add_smarts(this)" class="add-smarts" data-smarts-type="amina">Amina</a> |
+    <a href="javascript:void(0);" onclick="add_smarts(this)" class="add-smarts" data-smarts-type="amida">Amida</a>
   </p>
   <input type="submit" class="btn btn-default" value="Procurar">
 <% end  %>
