Implementing HBD and refactoring filters.

--- a/app/views/molecules/_search_form.html.erb
+++ b/app/views/molecules/_search_form.html.erb
@@ -30,6 +30,16 @@
         <input type="text" name="atom_number_end" id="atom_number_end" class="form-control">
       </div>
     </div>
+    <div class="col-md-2">
+      <div class="form-group">
+        <label for="hydrogen_bond_donor_start">Número mínimo de HDBs: </label>
+        <input type="text" name="hydrogen_bond_donor_start" id="hydrogen_bond_donor_start" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="hydrogen_bond_donor_end">Número máximo de HDBs: </label>
+        <input type="text" name="hydrogen_bond_donor_end" id="hydrogen_bond_donor_end" class="form-control">
+      </div>
+    </div>
   </div>
   <input type="submit" class="btn btn-default" value="Procurar">
 <% end  %>
