--- a/app/views/molecules/search.html.erb
+++ b/app/views/molecules/search.html.erb
@@ -9,6 +9,7 @@
       <th>Desenho</th>
       <th>Massa Molecular</th>
       <th>Número de átomos</th>
+      <th>HBD</th>
       <th>Smiles</th>
     </tr>
   </thead>
@@ -18,6 +19,7 @@
       <td><%= link_to "Ver molécula", print_path(m), class: 'nobr' %></td>
       <td><%= m.exact_mass %></td>
       <td><%= m.count %></td>
+      <td><%= BaseService::Filters::HydrogenBondDonor.hbd(m) %></td>
       <td><%= m %></td>
     </tr>
     <%- end %>
