--- a/app/views/molecules/_search_form.html.erb
+++ b/app/views/molecules/_search_form.html.erb
@@ -32,12 +32,22 @@
     </div>
     <div class="col-md-2">
       <div class="form-group">
-        <label for="hydrogen_bond_donor_start">Número mínimo de HDBs: </label>
+        <label for="hydrogen_bond_donor_start">Número mínimo de HBDs: </label>
         <input type="text" name="hydrogen_bond_donor_start" id="hydrogen_bond_donor_start" class="form-control">
       </div>
       <div class="form-group">
-        <label for="hydrogen_bond_donor_end">Número máximo de HDBs: </label>
+        <label for="hydrogen_bond_donor_end">Número máximo de HBDs: </label>
         <input type="text" name="hydrogen_bond_donor_end" id="hydrogen_bond_donor_end" class="form-control">
+      </div>
+    </div>
+    <div class="col-md-2">
+      <div class="form-group">
+        <label for="hydrogen_bond_acceptor_start">Número mínimo de HBAs: </label>
+        <input type="text" name="hydrogen_bond_acceptor_start" id="hydrogen_bond_acceptor_start" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="hydrogen_bond_acceptor_end">Número máximo de HBAs: </label>
+        <input type="text" name="hydrogen_bond_acceptor_end" id="hydrogen_bond_acceptor_end" class="form-control">
       </div>
     </div>
   </div>
