Ring number filters.

--- a/app/views/molecules/_search_form.html.erb
+++ b/app/views/molecules/_search_form.html.erb
@@ -50,6 +50,16 @@
         <input type="text" name="hydrogen_bond_acceptor_end" id="hydrogen_bond_acceptor_end" class="form-control">
       </div>
     </div>
+    <div class="col-md-2">
+      <div class="form-group">
+        <label for="ring_number_start">Número mínimo de anéis: </label>
+        <input type="text" name="ring_number_start" id="ring_number_start" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="ring_number_end">Número máximo de anéis: </label>
+        <input type="text" name="ring_number_end" id="ring_number_end" class="form-control">
+      </div>
+    </div>
   </div>
   <input type="submit" class="btn btn-default" value="Procurar">
 <% end  %>
