--- a/app/views/molecules/_search_form.html.erb
+++ b/app/views/molecules/_search_form.html.erb
@@ -60,6 +60,16 @@
         <input type="text" name="ring_number_end" id="ring_number_end" class="form-control">
       </div>
     </div>
+    <div class="col-md-2">
+      <div class="form-group">
+        <label for="log_p_start">Número mínimo de LogP: </label>
+        <input type="text" name="log_p_start" id="log_p_start" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="log_p_end">Número máximo de LogP: </label>
+        <input type="text" name="log_p_end" id="log_p_end" class="form-control">
+      </div>
+    </div>
   </div>
   <input type="submit" class="btn btn-default" value="Procurar">
 <% end  %>
