--- a/app/views/molecules/search.html.erb
+++ b/app/views/molecules/search.html.erb
@@ -13,7 +13,7 @@
       <th>HBD</th>
       <th>HBA</th>
       <th>LogP</th>
-      <th>Smiles</th>
+      <th>Fórmula</th>
     </tr>
   </thead>
   <tbody>
@@ -26,7 +26,7 @@
       <td><%= BaseService::Filters::HydrogenBondDonor.hbd(m) %></td>
       <td><%= BaseService::Filters::HydrogenBondAcceptor.hba(m) %></td>
       <td><%= '%.5f' % BaseService::Filters::LogP.logp(m) %></td>
-      <td><%= m %></td>
+      <td><%= m.formula %></td>
     </tr>
     <%- end %>
   </tbody>
