--- a/app/views/molecules/_search_form.html.erb
+++ b/app/views/molecules/_search_form.html.erb
@@ -1,73 +1,147 @@
 <%= form_tag(search_molecules_path, method: "get") do %>
-  <div class="form-group">
-    <label for="smarts">Insira o Smart que deseja procurar na base:</label>
-    <input type="text" class="form-control" id="smarts" name="smarts" placeholder="Exemplo: [CX3](=O)[OX2H1] (Ácido carboxílico)">
-  </div>
-  <p>
-    Alguns padrões pré-definidos: <a href="javascript:void(0);" onclick="add_smarts(this)" class="add-smarts" data-smarts-type="carboxilico">Ácido carboxílico</a> |
-    <a href="javascript:void(0);" onclick="add_smarts(this)" class="add-smarts" data-smarts-type="amina">Amina</a> |
-    <a href="javascript:void(0);" onclick="add_smarts(this)" class="add-smarts" data-smarts-type="amida">Amida</a>
-  </p>
-
   <div class="row">
-    <div class="col-md-2">
+    <div class="col-md-6">
       <div class="form-group">
-        <label for="molecular_mass_start">Massa molecular mínima: </label>
-        <input type="text" name="molecular_mass_start" id="molecular_mass_start" class="form-control">
+        <label for="smarts1">Insira o Smarts que deseja procurar na Base 1:</label>
+        <input type="text" class="form-control" id="smarts1" name="base1[smarts]" placeholder="Exemplo: [CX3](=O)[OX2H1] (Ácido carboxílico)">
+      </div>
+      <p>
+        Alguns padrões pré-definidos: <a href="javascript:void(0);" onclick="add_smarts(this, 'smarts1')" class="add-smarts" data-smarts-type="carboxilico">Ácido carboxílico</a> |
+        <a href="javascript:void(0);" onclick="add_smarts(this, 'smarts1')" class="add-smarts" data-smarts-type="amina">Amina</a> |
+        <a href="javascript:void(0);" onclick="add_smarts(this, 'smarts1')" class="add-smarts" data-smarts-type="amida">Amida</a>
+      </p>
+    </div>
+    <div class="col-md-6">
+      <div class="form-group">
+        <label for="smarts2">Insira o Smarts que deseja procurar na Base 2:</label>
+        <input type="text" class="form-control" id="smarts2" name="base2[smarts]" placeholder="Exemplo: [CX3](=O)[OX2H1] (Ácido carboxílico)">
+      </div>
+      <p>
+        Alguns padrões pré-definidos: <a href="javascript:void(0);" onclick="add_smarts(this, 'smarts2')" class="add-smarts" data-smarts-type="carboxilico">Ácido carboxílico</a> |
+        <a href="javascript:void(0);" onclick="add_smarts(this, 'smarts2')" class="add-smarts" data-smarts-type="amina">Amina</a> |
+        <a href="javascript:void(0);" onclick="add_smarts(this, 'smarts2')" class="add-smarts" data-smarts-type="amida">Amida</a>
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-1">
+      <div class="form-group">
+        <label for="base1[molecular_mass_start]">Massa Min: </label>
+        <input type="text" name="base1[molecular_mass_start]" id="base1[molecular_mass_start]" class="form-control">
       </div>
       <div class="form-group">
-        <label for="molecular_mass_end">Massa molecular máxima: </label>
-        <input type="text" name="molecular_mass_end" id="molecular_mass_end" class="form-control">
+        <label for="base1[molecular_mass_end]">Máx: </label>
+        <input type="text" name="base1[molecular_mass_end]" id="base1[molecular_mass_end]" class="form-control">
       </div>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-1">
       <div class="form-group">
-        <label for="atom_number_start">Número mínimo de átomos: </label>
-        <input type="text" name="atom_number_start" id="atom_number_start" class="form-control">
+        <label for="base1[atom_number_start]">Átomos Min: </label>
+        <input type="text" name="base1[atom_number_start]" id="base1[atom_number_start]" class="form-control">
       </div>
       <div class="form-group">
-        <label for="atom_number_end">Número máximo de átomos: </label>
-        <input type="text" name="atom_number_end" id="atom_number_end" class="form-control">
-      </div>
-    </div>
-    <div class="col-md-2">
-      <div class="form-group">
-        <label for="hydrogen_bond_donor_start">Número mínimo de HBDs: </label>
-        <input type="text" name="hydrogen_bond_donor_start" id="hydrogen_bond_donor_start" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="hydrogen_bond_donor_end">Número máximo de HBDs: </label>
-        <input type="text" name="hydrogen_bond_donor_end" id="hydrogen_bond_donor_end" class="form-control">
+        <label for="base1[atom_number_end]">Máx: </label>
+        <input type="text" name="base1[atom_number_end]" id="base1[atom_number_end]" class="form-control">
       </div>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-1">
       <div class="form-group">
-        <label for="hydrogen_bond_acceptor_start">Número mínimo de HBAs: </label>
-        <input type="text" name="hydrogen_bond_acceptor_start" id="hydrogen_bond_acceptor_start" class="form-control">
+        <label for="base1[hydrogen_bond_donor_start]">HBDs Min: </label>
+        <input type="text" name="base1[hydrogen_bond_donor_start]" id="base1[hydrogen_bond_donor_start]" class="form-control">
       </div>
       <div class="form-group">
-        <label for="hydrogen_bond_acceptor_end">Número máximo de HBAs: </label>
-        <input type="text" name="hydrogen_bond_acceptor_end" id="hydrogen_bond_acceptor_end" class="form-control">
-      </div>
-    </div>
-    <div class="col-md-2">
-      <div class="form-group">
-        <label for="ring_number_start">Número mínimo de anéis: </label>
-        <input type="text" name="ring_number_start" id="ring_number_start" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="ring_number_end">Número máximo de anéis: </label>
-        <input type="text" name="ring_number_end" id="ring_number_end" class="form-control">
+        <label for="base1[hydrogen_bond_donor_end]">Máx: </label>
+        <input type="text" name="base1[hydrogen_bond_donor_end]" id="base1[hydrogen_bond_donor_end]" class="form-control">
       </div>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-1">
       <div class="form-group">
-        <label for="log_p_start">Número mínimo de LogP: </label>
-        <input type="text" name="log_p_start" id="log_p_start" class="form-control">
+        <label for="base1[hydrogen_bond_acceptor_start]">HBAs Min: </label>
+        <input type="text" name="base1[hydrogen_bond_acceptor_start]" id="base1[hydrogen_bond_acceptor_start]" class="form-control">
       </div>
       <div class="form-group">
-        <label for="log_p_end">Número máximo de LogP: </label>
-        <input type="text" name="log_p_end" id="log_p_end" class="form-control">
+        <label for="base1[hydrogen_bond_acceptor_end]">Máx: </label>
+        <input type="text" name="base1[hydrogen_bond_acceptor_end]" id="base1[hydrogen_bond_acceptor_end]" class="form-control">
+      </div>
+    </div>
+    <div class="col-md-1">
+      <div class="form-group">
+        <label for="base1[ring_number_start]">Anéis Min: </label>
+        <input type="text" name="base1[ring_number_start]" id="base1[ring_number_start]" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="base1[ring_number_end]">Máx: </label>
+        <input type="text" name="base1[ring_number_end]" id="base1[ring_number_end]" class="form-control">
+      </div>
+    </div>
+    <div class="col-md-1">
+      <div class="form-group">
+        <label for="base1[log_p_start]">LogP Min: </label>
+        <input type="text" name="base1[log_p_start]" id="base1[log_p_start]" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="base1[log_p_end]">Máx: </label>
+        <input type="text" name="base1[log_p_end]" id="base1[log_p_end]" class="form-control">
+      </div>
+    </div>
+    <div class="col-md-1">
+      <div class="form-group">
+        <label for="base2[molecular_mass_start]">Massa Min: </label>
+        <input type="text" name="base2[molecular_mass_start]" id="base2[molecular_mass_start]" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="base2[molecular_mass_end]">Máx: </label>
+        <input type="text" name="base2[molecular_mass_end]" id="base2[molecular_mass_end]" class="form-control">
+      </div>
+    </div>
+    <div class="col-md-1">
+      <div class="form-group">
+        <label for="base2[atom_number_start]">Átomos Min: </label>
+        <input type="text" name="base2[atom_number_start]" id="base2[atom_number_start]" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="base2[atom_number_end]">Máx: </label>
+        <input type="text" name="base2[atom_number_end]" id="base2[atom_number_end]" class="form-control">
+      </div>
+    </div>
+    <div class="col-md-1">
+      <div class="form-group">
+        <label for="base2[hydrogen_bond_donor_start]">HBDs Min: </label>
+        <input type="text" name="base2[hydrogen_bond_donor_start]" id="base2[hydrogen_bond_donor_start]" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="base2[hydrogen_bond_donor_end]">Máx: </label>
+        <input type="text" name="base2[hydrogen_bond_donor_end]" id="base2[hydrogen_bond_donor_end]" class="form-control">
+      </div>
+    </div>
+    <div class="col-md-1">
+      <div class="form-group">
+        <label for="base2[hydrogen_bond_acceptor_start]">HBAs Min: </label>
+        <input type="text" name="base2[hydrogen_bond_acceptor_start]" id="base2[hydrogen_bond_acceptor_start]" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="base2[hydrogen_bond_acceptor_end]">Máx: </label>
+        <input type="text" name="base2[hydrogen_bond_acceptor_end]" id="base2[hydrogen_bond_acceptor_end]" class="form-control">
+      </div>
+    </div>
+    <div class="col-md-1">
+      <div class="form-group">
+        <label for="base2[ring_number_start]">Anéis Min: </label>
+        <input type="text" name="base2[ring_number_start]" id="base2[ring_number_start]" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="base2[ring_number_end]">Máx: </label>
+        <input type="text" name="base2[ring_number_end]" id="base2[ring_number_end]" class="form-control">
+      </div>
+    </div>
+    <div class="col-md-1">
+      <div class="form-group">
+        <label for="base2[log_p_start]">LogP Min: </label>
+        <input type="text" name="base2[log_p_start]" id="base2[log_p_start]" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="base2[log_p_end]">Máx: </label>
+        <input type="text" name="base2[log_p_end]" id="base2[log_p_end]" class="form-control">
       </div>
     </div>
   </div>
