--- a/app/views/molecules/search.html.erb
+++ b/app/views/molecules/search.html.erb
@@ -5,3 +5,9 @@
 
 <h3>Resultado na Base 2 <%= @smarts_b2 %></h3>
 <p><%= @molecules_b2.count %> encontrados</p>
+
+<%= form_tag react_molecules_path, method: 'post' do %>
+  <input type="hidden" name="b1" value="<%= @dump_b1 %>" />
+  <input type="hidden" name="b2" value="<%= @dump_b2 %>" />
+  <input type="submit" class="btn btn-default" value="Executar reação das bases" />
+<% end  %>
