Partials for filters.

--- a/app/views/molecules/_search_form.html.erb
+++ b/app/views/molecules/_search_form.html.erb
@@ -24,126 +24,8 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-1">
-      <div class="form-group">
-        <label for="base1[molecular_mass_start]">Massa Min: </label>
-        <input type="text" name="base1[molecular_mass_start]" id="base1[molecular_mass_start]" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="base1[molecular_mass_end]">Máx: </label>
-        <input type="text" name="base1[molecular_mass_end]" id="base1[molecular_mass_end]" class="form-control">
-      </div>
-    </div>
-    <div class="col-md-1">
-      <div class="form-group">
-        <label for="base1[atom_number_start]">Átomos Min: </label>
-        <input type="text" name="base1[atom_number_start]" id="base1[atom_number_start]" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="base1[atom_number_end]">Máx: </label>
-        <input type="text" name="base1[atom_number_end]" id="base1[atom_number_end]" class="form-control">
-      </div>
-    </div>
-    <div class="col-md-1">
-      <div class="form-group">
-        <label for="base1[hydrogen_bond_donor_start]">HBDs Min: </label>
-        <input type="text" name="base1[hydrogen_bond_donor_start]" id="base1[hydrogen_bond_donor_start]" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="base1[hydrogen_bond_donor_end]">Máx: </label>
-        <input type="text" name="base1[hydrogen_bond_donor_end]" id="base1[hydrogen_bond_donor_end]" class="form-control">
-      </div>
-    </div>
-    <div class="col-md-1">
-      <div class="form-group">
-        <label for="base1[hydrogen_bond_acceptor_start]">HBAs Min: </label>
-        <input type="text" name="base1[hydrogen_bond_acceptor_start]" id="base1[hydrogen_bond_acceptor_start]" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="base1[hydrogen_bond_acceptor_end]">Máx: </label>
-        <input type="text" name="base1[hydrogen_bond_acceptor_end]" id="base1[hydrogen_bond_acceptor_end]" class="form-control">
-      </div>
-    </div>
-    <div class="col-md-1">
-      <div class="form-group">
-        <label for="base1[ring_number_start]">Anéis Min: </label>
-        <input type="text" name="base1[ring_number_start]" id="base1[ring_number_start]" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="base1[ring_number_end]">Máx: </label>
-        <input type="text" name="base1[ring_number_end]" id="base1[ring_number_end]" class="form-control">
-      </div>
-    </div>
-    <div class="col-md-1">
-      <div class="form-group">
-        <label for="base1[log_p_start]">LogP Min: </label>
-        <input type="text" name="base1[log_p_start]" id="base1[log_p_start]" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="base1[log_p_end]">Máx: </label>
-        <input type="text" name="base1[log_p_end]" id="base1[log_p_end]" class="form-control">
-      </div>
-    </div>
-    <div class="col-md-1">
-      <div class="form-group">
-        <label for="base2[molecular_mass_start]">Massa Min: </label>
-        <input type="text" name="base2[molecular_mass_start]" id="base2[molecular_mass_start]" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="base2[molecular_mass_end]">Máx: </label>
-        <input type="text" name="base2[molecular_mass_end]" id="base2[molecular_mass_end]" class="form-control">
-      </div>
-    </div>
-    <div class="col-md-1">
-      <div class="form-group">
-        <label for="base2[atom_number_start]">Átomos Min: </label>
-        <input type="text" name="base2[atom_number_start]" id="base2[atom_number_start]" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="base2[atom_number_end]">Máx: </label>
-        <input type="text" name="base2[atom_number_end]" id="base2[atom_number_end]" class="form-control">
-      </div>
-    </div>
-    <div class="col-md-1">
-      <div class="form-group">
-        <label for="base2[hydrogen_bond_donor_start]">HBDs Min: </label>
-        <input type="text" name="base2[hydrogen_bond_donor_start]" id="base2[hydrogen_bond_donor_start]" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="base2[hydrogen_bond_donor_end]">Máx: </label>
-        <input type="text" name="base2[hydrogen_bond_donor_end]" id="base2[hydrogen_bond_donor_end]" class="form-control">
-      </div>
-    </div>
-    <div class="col-md-1">
-      <div class="form-group">
-        <label for="base2[hydrogen_bond_acceptor_start]">HBAs Min: </label>
-        <input type="text" name="base2[hydrogen_bond_acceptor_start]" id="base2[hydrogen_bond_acceptor_start]" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="base2[hydrogen_bond_acceptor_end]">Máx: </label>
-        <input type="text" name="base2[hydrogen_bond_acceptor_end]" id="base2[hydrogen_bond_acceptor_end]" class="form-control">
-      </div>
-    </div>
-    <div class="col-md-1">
-      <div class="form-group">
-        <label for="base2[ring_number_start]">Anéis Min: </label>
-        <input type="text" name="base2[ring_number_start]" id="base2[ring_number_start]" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="base2[ring_number_end]">Máx: </label>
-        <input type="text" name="base2[ring_number_end]" id="base2[ring_number_end]" class="form-control">
-      </div>
-    </div>
-    <div class="col-md-1">
-      <div class="form-group">
-        <label for="base2[log_p_start]">LogP Min: </label>
-        <input type="text" name="base2[log_p_start]" id="base2[log_p_start]" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="base2[log_p_end]">Máx: </label>
-        <input type="text" name="base2[log_p_end]" id="base2[log_p_end]" class="form-control">
-      </div>
-    </div>
+    <%= render partial: 'filters', locals: { base: 'base2' } %>
+    <%= render partial: 'filters', locals: { base: 'base1' } %>
   </div>
   <input type="submit" class="btn btn-default" value="Procurar">
 <% end  %>
