--- a/app/views/molecules/_filters.html.erb
+++ b/app/views/molecules/_filters.html.erb
@@ -1,60 +1,67 @@
-<div class="col-md-1">
+<div class="flow">
   <div class="form-group">
-    <label for="<%= base %>[molecular_mass_start]">Massa Min: </label>
-    <input type="text" name="<%= base %>[molecular_mass_start]" id="<%= base %>[molecular_mass_start]" class="form-control">
+    <label for="<%= base %>_smarts">Insira o Smarts que deseja procurar na Base 2:</label>
+    <input type="text" id="<%= base %>_smarts" name="<%= base %>[smarts]" placeholder="Exemplo: [CX3](=O)[OX2H1] (Ácido carboxílico)" class="form-control">
   </div>
-  <div class="form-group">
-    <label for="<%= base %>[molecular_mass_end]">Máx: </label>
-    <input type="text" name="<%= base %>[molecular_mass_end]" id="<%= base %>[molecular_mass_end]" class="form-control">
-  </div>
+  <p>
+    Alguns padrões pré-definidos: <a href="javascript:void(0);" onclick="add_smarts(this, '<%= base %>_smarts')" class="add-smarts" data-smarts-type="carboxilico">Ácido carboxílico</a> |
+    <a href="javascript:void(0);" onclick="add_smarts(this, '<%= base %>_smarts')" class="add-smarts" data-smarts-type="amina">Amina</a> |
+    <a href="javascript:void(0);" onclick="add_smarts(this, '<%= base %>_smarts')" class="add-smarts" data-smarts-type="amida">Amida</a>
+  </p>
 </div>
-<div class="col-md-1">
-  <div class="form-group">
-    <label for="<%= base %>[atom_number_start]">Átomos Min: </label>
-    <input type="text" name="<%= base %>[atom_number_start]" id="<%= base %>[atom_number_start]" class="form-control">
-  </div>
-  <div class="form-group">
-    <label for="<%= base %>[atom_number_end]">Máx: </label>
-    <input type="text" name="<%= base %>[atom_number_end]" id="<%= base %>[atom_number_end]" class="form-control">
-  </div>
-</div>
-<div class="col-md-1">
-  <div class="form-group">
-    <label for="<%= base %>[hydrogen_bond_donor_start]">HBDs Min: </label>
-    <input type="text" name="<%= base %>[hydrogen_bond_donor_start]" id="<%= base %>[hydrogen_bond_donor_start]" class="form-control">
-  </div>
-  <div class="form-group">
-    <label for="<%= base %>[hydrogen_bond_donor_end]">Máx: </label>
-    <input type="text" name="<%= base %>[hydrogen_bond_donor_end]" id="<%= base %>[hydrogen_bond_donor_end]" class="form-control">
-  </div>
-</div>
-<div class="col-md-1">
-  <div class="form-group">
-    <label for="<%= base %>[hydrogen_bond_acceptor_start]">HBAs Min: </label>
-    <input type="text" name="<%= base %>[hydrogen_bond_acceptor_start]" id="<%= base %>[hydrogen_bond_acceptor_start]" class="form-control">
-  </div>
-  <div class="form-group">
-    <label for="<%= base %>[hydrogen_bond_acceptor_end]">Máx: </label>
-    <input type="text" name="<%= base %>[hydrogen_bond_acceptor_end]" id="<%= base %>[hydrogen_bond_acceptor_end]" class="form-control">
-  </div>
-</div>
-<div class="col-md-1">
-  <div class="form-group">
-    <label for="<%= base %>[ring_number_start]">Anéis Min: </label>
-    <input type="text" name="<%= base %>[ring_number_start]" id="<%= base %>[ring_number_start]" class="form-control">
-  </div>
-  <div class="form-group">
-    <label for="<%= base %>[ring_number_end]">Máx: </label>
-    <input type="text" name="<%= base %>[ring_number_end]" id="<%= base %>[ring_number_end]" class="form-control">
-  </div>
-</div>
-<div class="col-md-1">
-  <div class="form-group">
-    <label for="<%= base %>[log_p_start]">LogP Min: </label>
-    <input type="text" name="<%= base %>[log_p_start]" id="<%= base %>[log_p_start]" class="form-control">
-  </div>
-  <div class="form-group">
-    <label for="<%= base %>[log_p_end]">Máx: </label>
-    <input type="text" name="<%= base %>[log_p_end]" id="<%= base %>[log_p_end]" class="form-control">
-  </div>
+<div class="row">
+
+  <table class="table" id="filters-table">
+    <thead>
+      <tr>
+        <th>Min</th>
+        <th>Property</th>
+        <th>Máx</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          <input type="text" name="<%= base %>[molecular_mass_start]" id="<%= base %>[molecular_mass_start]">
+          </td>
+        <td>Mass</td>
+        <td><input type="text" name="<%= base %>[molecular_mass_end]" id="<%= base %>[molecular_mass_end]"></td>
+      </tr>
+      <tr>
+        <td>
+          <input type="text" name="<%= base %>[atom_number_start]" id="<%= base %>[atom_number_start]">
+          </td>
+        <td># Atoms</td>
+        <td><input type="text" name="<%= base %>[atom_number_end]" id="<%= base %>[atom_number_end]"></td>
+      </tr>
+      <tr>
+        <td>
+          <input type="text" name="<%= base %>[hydrogen_bond_donor_start]" id="<%= base %>[hydrogen_bond_donor_start]">
+          </td>
+        <td>HBD</td>
+        <td><input type="text" name="<%= base %>[hydrogen_bond_donor_end]" id="<%= base %>[hydrogen_bond_donor_end]"></td>
+      </tr>
+      <tr>
+        <td>
+          <input type="text" name="<%= base %>[hydrogen_bond_acceptor_start]" id="<%= base %>[hydrogen_bond_acceptor_start]">
+          </td>
+        <td>HBA</td>
+        <td><input type="text" name="<%= base %>[hydrogen_bond_acceptor_end]" id="<%= base %>[hydrogen_bond_acceptor_end]"></td>
+      </tr>
+      <tr>
+        <td>
+          <input type="text" name="<%= base %>[ring_number_start]" id="<%= base %>[ring_number_start]">
+          </td>
+        <td># Rings</td>
+        <td><input type="text" name="<%= base %>[ring_number_end]" id="<%= base %>[ring_number_end]"></td>
+      </tr>
+      <tr>
+        <td>
+          <input type="text" name="<%= base %>[log_p_start]" id="<%= base %>[log_p_start]">
+          </td>
+        <td>LogP</td>
+        <td><input type="text" name="<%= base %>[log_p_end]" id="<%= base %>[log_p_end]"></td>
+      </tr>
+    </tbody>
+  </table>
 </div>
