--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="André Taiar">
 
-    <title>Base de reagentes</title>
+    <title><%= t('title') %></title>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
@@ -30,11 +30,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Pesquisa na base de reagentes</a>
+          <%= link_to t('title_home'), root_path, class: 'navbar-brand' %>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to 'Início', root_path %></li>
+            <!-- <li></li> -->
           </ul>
         </div>
       </div>
