Translating more and adding labels at filters form

--- a/app/views/molecules/_filters.html.erb
+++ b/app/views/molecules/_filters.html.erb
@@ -25,42 +25,42 @@
         <td>
           <input type="text" name="<%= base %>[molecular_mass_start]" id="<%= base %>[molecular_mass_start]">
           </td>
-        <td><%= t 'mass' %></td>
+        <td><label for="<%= base %>[molecular_mass_start]"><%= t 'mass' %></label></td>
         <td><input type="text" name="<%= base %>[molecular_mass_end]" id="<%= base %>[molecular_mass_end]"></td>
       </tr>
       <tr>
         <td>
           <input type="text" name="<%= base %>[atom_number_start]" id="<%= base %>[atom_number_start]">
           </td>
-        <td># <%= t 'atoms' %></td>
+        <td><label for="<%= base %>[atom_number_start]"># <%= t 'atoms' %></label></td>
         <td><input type="text" name="<%= base %>[atom_number_end]" id="<%= base %>[atom_number_end]"></td>
       </tr>
       <tr>
         <td>
           <input type="text" name="<%= base %>[hydrogen_bond_donor_start]" id="<%= base %>[hydrogen_bond_donor_start]">
           </td>
-        <td>HBD</td>
+        <td><label for="<%= base %>[hydrogen_bond_donor_start]">HBD</label></td>
         <td><input type="text" name="<%= base %>[hydrogen_bond_donor_end]" id="<%= base %>[hydrogen_bond_donor_end]"></td>
       </tr>
       <tr>
         <td>
           <input type="text" name="<%= base %>[hydrogen_bond_acceptor_start]" id="<%= base %>[hydrogen_bond_acceptor_start]">
           </td>
-        <td>HBA</td>
+        <td><label for="<%= base %>[hydrogen_bond_acceptor_start]">HBA</label></td>
         <td><input type="text" name="<%= base %>[hydrogen_bond_acceptor_end]" id="<%= base %>[hydrogen_bond_acceptor_end]"></td>
       </tr>
       <tr>
         <td>
           <input type="text" name="<%= base %>[ring_number_start]" id="<%= base %>[ring_number_start]">
           </td>
-        <td># <%= t 'rings' %></td>
+        <td><label for="<%= base %>[ring_number_start]"># <%= t 'rings' %></label></td>
         <td><input type="text" name="<%= base %>[ring_number_end]" id="<%= base %>[ring_number_end]"></td>
       </tr>
       <tr>
         <td>
           <input type="text" name="<%= base %>[log_p_start]" id="<%= base %>[log_p_start]">
           </td>
-        <td>LogP</td>
+        <td><label for="<%= base %>[log_p_start]">LogP</label></td>
         <td><input type="text" name="<%= base %>[log_p_end]" id="<%= base %>[log_p_end]"></td>
       </tr>
     </tbody>
