--- a/app/views/molecules/search.html.erb
+++ b/app/views/molecules/search.html.erb
@@ -1,13 +1,13 @@
 <%= render 'search_form' %>
 <hr>
-<h3>Resultado na Base 1 <%= @smarts_b1 %></h3>
-<p><%= @molecules_b1.count %> encontrados</p>
+<h3><%= t 'results_from' %> Base 1 <%= @smarts_b1 %></h3>
+<p><%= @molecules_b1.count %> <%= t 'found' %></p>
 
-<h3>Resultado na Base 2 <%= @smarts_b2 %></h3>
-<p><%= @molecules_b2.count %> encontrados</p>
+<h3><%= t 'results_from' %> Base 2 <%= @smarts_b2 %></h3>
+<p><%= @molecules_b2.count %> <%= t 'found' %></p>
 
 <%= form_tag react_molecules_path, method: 'post' do %>
   <input type="hidden" name="b1" value="<%= @dump_b1 %>" />
   <input type="hidden" name="b2" value="<%= @dump_b2 %>" />
-  <input type="submit" class="btn btn-default" value="Executar reação das bases" />
+  <input type="submit" class="btn btn-default" value="<%= t 'perform_reactions' %>" />
 <% end  %>
