--- a/app/views/molecules/_molecules_table.html.erb
+++ b/app/views/molecules/_molecules_table.html.erb
@@ -1,12 +1,12 @@
 <table class="table table-striped toggle-off" id="<%= id %>">
   <thead>
     <tr>
-      <th>Molécula</th>
-      <th>Fórmula</th>
+      <th><%= t 'mol_thead' %></th>
+      <th><%= t 'formule' %></th>
       <th>LogP</th>
-      <th>Massa Molecular</th>
-      <th>Número de átomos</th>
-      <th>Número de anéis</th>
+      <th><%= t 'molecular_mass' %></th>
+      <th><%= t 'atoms_number' %></th>
+      <th><%= t 'rings_number' %></th>
       <th>HBD</th>
       <th>HBA</th>
     </tr>
